Canary/ingress.yml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:

  name: rollouts-ingress

  annotations:

    kubernetes.io/ingress.class: nginx

spec:

  rules:

  - http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: rollouts-demo

            port:

              number: 80
